feat: acervo completo de 683 jogos, capas thumb, filtros e suporte a deploy no Render